<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--底图-->
    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/player_default_bg"
        android:scaleType="fitXY"
        android:visibility="visible" />

    <!--加载动画-->
    <LinearLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="27dp"
            android:layout_height="10dp"
            android:indeterminateDrawable="@drawable/loading" />

        <TextView
            android:id="@+id/load_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/flex_player_on_loading"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>
    <!--改变播放位置-->
    <LinearLayout
        android:id="@+id/change_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_radius_4"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/change_position_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textColor="@android:color/white"
            android:textSize="28sp" />

        <ProgressBar
            android:id="@+id/change_position_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:max="100"
            android:progressDrawable="@drawable/pb_change" />
    </LinearLayout>

    <!--改变亮度-->
    <LinearLayout
        android:id="@+id/change_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_radius_4"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_palyer_brightness" />

        <ProgressBar
            android:id="@+id/change_brightness_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:max="100"
            android:progressDrawable="@drawable/pb_change" />

    </LinearLayout>
    <!--改变声音-->
    <LinearLayout
        android:id="@+id/change_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_radius_4"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_palyer_volume" />

        <ProgressBar
            android:id="@+id/change_volume_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:max="100"
            android:progressDrawable="@drawable/pb_change" />

    </LinearLayout>

    <!-- 倍速控制区 -->
    <RadioGroup
        android:id="@+id/speed_content"
        android:layout_width="@dimen/player_speed_content_width"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/content_background"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/dot_eight"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:button="@null"
            android:gravity="center"
            android:text="0.8X"
            android:textColor="@color/player_text_color"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:button="@null"
            android:gravity="center"
            android:text="1.0X"
            android:textColor="@color/player_text_color"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/one_dot_two_five"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:button="@null"
            android:gravity="center"
            android:text="1.25X"
            android:textColor="@color/player_text_color"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/one_dot_five"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:button="@null"
            android:gravity="center"
            android:text="1.5X"
            android:textColor="@color/player_text_color"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:button="@null"
            android:gravity="center"
            android:text="2X"
            android:textColor="@color/player_text_color"
            android:textSize="14sp" />

    </RadioGroup>

    <!-- 分辨率控制区-->
    <FrameLayout
        android:id="@+id/resolution_content"
        android:layout_width="@dimen/player_speed_content_width"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/content_background">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/resolution_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <!-- 剧集控制区-->
    <FrameLayout
        android:id="@+id/selection_content"
        android:layout_width="@dimen/player_selection_content_width"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@color/content_background"
        android:clipToPadding="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selection_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:paddingBottom="20dp" />

    </FrameLayout>

    <!--播放完成-->
    <LinearLayout
        android:id="@+id/completed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#6c0b0b0b"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_player_replay"
            android:drawablePadding="4dp"
            android:padding="8dp"
            android:text="@string/flex_player_repeat_play"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

    </LinearLayout>
    <!--播放错误-->
    <LinearLayout
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flex_player_play_error_notify"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_retry"
            android:paddingLeft="12dp"
            android:paddingTop="4dp"
            android:paddingRight="12dp"
            android:paddingBottom="5dp"
            android:text="@string/flex_player_play_error_retry"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <!--顶部控制区-->
    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bottom_bar_height"
        android:background="@drawable/player_mask_top"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_player_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="2"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/battery_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/battery_100" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:textColor="@android:color/white"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

    <!--底部控制区-->
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/player_mask_bottom"
        android:gravity="center_vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <ImageView
            android:id="@+id/restart_or_pause"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_player_start" />

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="00:00"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <SeekBar
            android:id="@+id/seek"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:max="100"
            android:maxHeight="1.5dp"
            android:minHeight="1.5dp"
            android:progressDrawable="@drawable/seek_progress"
            android:thumb="@drawable/seek_thumb" />

        <TextView
            android:id="@+id/clarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/change_content"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/player_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="@string/player_speed"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/resolution_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="@string/resolution_type"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/selection_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text="@string/player_list"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/full_screen"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_player_enlarge" />

        </LinearLayout>

    </LinearLayout>

    <!--右下角初始显示的总时长-->
    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:padding="4dp"
        android:text="00:00"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        android:visibility="gone" />

    <!--中间开始播放按钮-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/no_wifi_notify_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/wifi_not_connect_notify"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/center_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_player_center_start"
            android:visibility="visible" />

    </LinearLayout>


</RelativeLayout>